Fixed Z-index problem

--- a/main.css
+++ b/main.css
@@ -65,6 +65,7 @@ li{display: inline;}
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: -1;
 }
 
 .container{
